--- a/Joyce/NYT_data_transformation.ipynb
+++ b/Joyce/NYT_data_transformation.ipynb
@@ -15,6 +15,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "# urls of detailed & subject tables with example (not used)\n",
+    "url = 'https://api.census.gov/data/2016/acs/acs5/subject?get=NAME,S1902_C01_001E,S2409_C05_006E&for=zip%20code%20tabulation%20area:*'\n",
+    "urlg = 'https://api.census.gov/data/2017/acs/acs5?get=NAME,group(B01001)&for=us:1'\n",
+    "\n",
+    "#url fixed variables\n",
+    "urlbeg = 'https://api.census.gov/data/'\n",
+    "\n",
+    "urlmid = '/acs/acs5/subject?get=NAME,'\n",
+    "urlmidd = '/acs/acs5?get=NAME,'\n",
+    "\n",
+    "urlend = '&for=zip%20code%20tabulation%20area:*'\n",
+    "\n",
+    "# reports, while independently stored in list by name\n",
+    "#, are a single string within the call, notice the reports & reports names are in inverse order\n",
+    "\n",
+    "reportsf = 'S1902_C01_001E,S2409_C05_006E,S1251_C01_001E,S2301_C01_001E,S1701_C01_001E'\n",
+    "reportsd = 'B01003_001E,B19013_001E,B19301_001E,B25075_001E'\n",
+    "reportnames = ['PopInPoverty','PopEmployed','MarriedPastYr','PercentFemaleEmployed','EstMeanIncAll']\n",
+    "reportnamesd = ['PropVal', 'Per Capita Income','Household Income','Population']\n",
+    "\n",
+    "# The looped variable in the calls are the years\n",
+    "years = ['2014', '2015', '2016', '2017']\n",
+    "\n",
+    "    # Intialize empty lists to store call urls and json requests of reports by\n",
+    "    #running a for loop appending each url in a string.\n",
+    "urlsf = [(urlbeg + year + urlmid + reportsf + urlend) for year in years]\n",
+    "reports1 = [requests.get(url).json() for url in urlsf]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -1974,7 +2013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
